--- a/tests/qgis/QGIS/QGIS3.ini
+++ b/tests/qgis/QGIS/QGIS3.ini
@@ -1,14 +1,9 @@
+[Processing]
+Configuration\MODELS_FOLDER=/src/tests/unittests/models
+Configuration\PREFER_FILENAME_AS_LAYER_NAME=false
+Configuration\SCRIPTS_FOLDERS=/src/tests/unittests/scripts
 
 [Qgis]
-compileExpressions=true
-
-[qgis]
-simplifyLocal=false ; true
-warnOldProjectVersion=false ; true
-networkAndProxy\networkTimeout=10000 ;instead of 60000
-defaultTileExpiry=168 ;24
-defaultTileMaxRetry=2 ;3
-defaultCapabilitiesExpiry=24; 24
 compileExpressions=true
 
 [proxy]
@@ -19,3 +14,11 @@ proxyHost=proxy.whatever.com
 proxyPassword=
 proxyPort=3128
 
+[qgis]
+compileExpressions=true
+defaultCapabilitiesExpiry=24
+defaultTileExpiry=168
+defaultTileMaxRetry=2
+networkAndProxy\networkTimeout=10000
+simplifyLocal=false
+warnOldProjectVersion=false
