--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "docker-qgis-platform"]
-	path = docker-qgis-platform
+[submodule "qgis-platform"]
+	path = qgis-platform
 	url = https://github.com/3liz/docker-qgis-platform.git
